src/pages/Profile/Profile.css
.toggle-list {
  display: flex;
  justify-content: center;
}

.toggle-list .btn {
  flex: 1;
}

.toggle-list .btn + .btn {
  margin-left: 10px;
}

.btn-with-icon {
  display: flex;
  margin: 0;
}

.btn-with-icon > span {
  margin: auto;
}

.chartjs-render-monitor + .chartjs-render-monitor {
  margin-top: 20px;
}

.profile-card {
  margin-bottom: 20px;
}

.profile-card .card-content p {
  margin: 0;
}

.profile-card .card-content p + p {
  margin-top: 10px;
  font-size: 13px;
}

.card-image {
  border-radius: 50%;
  box-shadow: 2px 4px 12px 0 rgba(0, 0, 0, 0.1);
}

.info {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

.info-item {
  width: 48px;
  text-align: center;
}

.info-value {
  height: 30px;
  line-height: 30px;
  border: 1px solid #efefef;
  border-bottom: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.info-unit {
  height: 20px;
  line-height: 20px;
  padding: 0 0px;
  font-size: 0.75rem;
  font-weight: bold;
  background: #0079c1;
  color: #fff;
}

.control-list {
  margin-top: 40px;
}

.control-list .btn + .btn {
  margin-top: 10px;
}

.control-list-btn-indicator {
  display: inline-block;
  width: 20px;
  height: 20px;
  font-size: 0.75rem;
  line-height: 20px;
  background: #fff;
  color: #5a9359;
  border-radius: 50%;
  margin-left: 5px;
}

.doughnut-list {
  width: 135px;
  margin: auto;
}

